--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -5,7 +5,7 @@ nav {
   top: 0;
   z-index: 0;
   height: 120px;
-  width: 85%;
+  width: 100%;
 }
 .tweet-bar span {
   margin: 0 auto;
